--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="container-a">
         <div class="container1">
-            <img src="images/clock_logo.png" alt="clock logo" height="70px" width="180px" style="margin-top: 20px;">
+            <img src="images/clock_logo.png" alt="clock logo" height="70px" width="180px" style="margin-top: 20px;margin:1rem 0 0.5rem 12rem;">
             <div class="set-time">
                 <div class="wakeuptimecontainer">
                 <img src="images/wakeup.svg" alt="wake up icon" height="34px" width="34px">
