--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="container-a">
         <div class="container1">
-            <img src="images/clock_logo.png" alt="clock logo" height="70px" width="180px" style="margin-top: 20px;margin:1rem 0 0.5rem 12rem;">
+            <img src="images/clock_logo.png" alt="clock logo" height="70px" width="180px" style="margin-top: 20px;margin:1rem 0 0.5rem 12rem;" class="clock-logo">
             <div class="set-time">
                 <div class="wakeuptimecontainer">
                 <img src="images/wakeup.svg" alt="wake up icon" height="34px" width="34px">
